# chinese_plate_tensorrt

./: .gitignore  CMakeLists.txt  README.md  detect_rec_plate.cpp  detect_rec_plate_cuda.cpp  main.cpp  onnx2trt.sh  plate_detect.cpp  plate_rec.cpp  plate_rec.onnx  postprocess.cu  preprocess.cu  preprocess.h  utils.cpp
include/: plate_detect.h  plate_rec.h  postprocess.h  utils.hpp
onnx2trt/: onnx2trt.cpp
onnx_model/: plate_detect.onnx  plate_rec.onnx
